<resources>
    <string name="app_name">Battle Tap</string>

    <!--  Create Account Activity -->
    <string name="create_account_actionBar_title">Creating account</string>
    <string name="createAccountButton">Create</string>
    <string name="activity_create_account_editText_pseudo_text">Pseudo</string>
    <string name="activity_create_account_pwd_editText_text">Password</string>
    <string name="activity_create_account_pwdConfirm_editText_text">Confirm password</string>
    <string name="activity_create_account_title_text">Create Account</string>
    <string name="activity_create_account_EditText_Email_hint_text">Email</string>

    <!--  Finalize Account Activity -->
    <string name="finalize_account_actionBar_title">Finalization account</string>

    <!--  BoardGameMultiActivity -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="bluetooth_unavailable">Bluetooth is not available</string>

    <string name="action_settings">Settings</string>
    <string name="no_bluetooth_device">No Bluetooth device found</string>
    <string name="title_activity_device_list">Devices List</string>
    <string name="title_activity_connection">Connection</string>
    <string name="hintEmail">Email</string>
    <string name="passwordText">Password</string>
    <string name="ConnectionButton">Connection</string>
    <string name="pwdForget">Password forgotten</string>
    <string name="title_activity_menu">Menu</string>
    <string name="createAccountTitle">Create account</string>
    <string name="pswCreateAccountDefault">Password</string>
    <string name="pswConfirmCreateAccountDefault">Confirm password</string>
    <string name="pseudoCreateAccountDefault">Pseudo</string>
    <string name="emailCreateAccount">E-mail</string>
    <string name="emailCreateAccountDefault">E-mail</string>
    <string name="createAccountBtn">Create account</string>
    <string name="title_activity_password_forgotten">Password Forgotten</string>
    <string name="passwordForgottenText">Please enter your email. We will send you your password : </string>

    <string name="num_to_catch_text">Nombre à atteindre</string>
    <string name="Nb_Number_catch_text">Nb nombres atteints</string>
    <string name="create_account_link_text">Create account</string>
    <string name="summary_board_game_solo_activity_title">Summary</string>
    <string name="summary_board_game_solo_activity_btnBack">Back To Menu</string>
    <string name="caught">" caught"</string>
    <string name="game_over">Game over !</string>
    <string name="ok">Ok</string>
    <string name="want_to_quit">Do you want to quit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="want_to_retry">Retry ?</string>
    <string name="text_penality">"Penality : "</string>
    <string name="text_difference">"Difference : "</string>
    <string name="text_caught">" Caught : "</string>
    <string name="join_session">Join a session</string>
    <string name="host_session">Host a session</string>
    <string name="session_configuration">Session configuration</string>
    <string name="dialog_number_sequence_title">Number max sequence</string>
    <string name="config_game_wait">Configuration game, please wait...</string>
    <string name="choose_max_number">Please choose a max number</string>
    <string name="activity_create_account_btnNext_text">Next</string>
    <string name="activity_finalize_create_account_radioButtonMale_text">M</string>
    <string name="activity_finalize_create_account_radioButtonFemale_text">F</string>
    <string name="activity_finalize_create_account_sexe_text">Sexe</string>
    <string name="activity_finalize_create_account_secret_response_hint">Secret answer</string>
    <string name="activity_finalize_create_account_btnFinalize_text">Finalize</string>
    <string name="we_miss_you_toast">We missed you</string>


    <!--Test-->
    <string-array name="Question">
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
        <item>What\'s your favorite color?</item>
        <item>How many sisters do you have?</item>
        <item>What is the nickname of your childhood ?</item>
    </string-array>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="number_to_catch">Nombre à atteindre</string>
    <string name="number_of_caught_numbers">Nb Nombres Atteints</string>
    <string name="title_activity_score_solo">ScoreSoloActivity</string>
    <string name="activity_score_solo_ranking_title_text">Ranking</string>
    <string name="score_personnel_text">Scores perso</string>
    <string name="title_activity_summary_board_game_multi">Summary Multi</string>
    <string name="no_tap">Aucun tap effectué</string>
    <string name="win">Gagné !</string>
    <string name="loose">Perdu...</string>
</resources>