<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.julab.battletap.PasswordForgottenActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_password_forgotten"
        tools:context="com.julab.battletap.CreateAccountActivity"
        android:background="@drawable/fond_battletap">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearLayout2"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_title_text"
                android:id="@+id/activity_create_account_title_id"
                android:layout_gravity="center_horizontal"
                android:textSize="30dp"
                android:layout_marginBottom="30dp"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_create_account_pseudo_id"
                android:layout_gravity="center_horizontal"
                android:hint="@string/activity_create_account_editText_pseudo_text"
                android:layout_weight="0.00"
                android:background="@drawable/edit_text_color"
                android:textColorHint="#d6d6d6"
                android:textColor="#ffffff"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/activity_create_account_editText_email_id"
                android:hint="@string/activity_create_account_EditText_Email_hint_text"
                android:layout_weight="0.00"
                android:background="@drawable/edit_text_color"
                android:textColorHint="#d6d6d6"
                android:textColor="#ffffff"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/activity_create_account_pwd_editText_text"
                android:id="@+id/activity_create_account_pwd_editText_id"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.00"
                android:background="@drawable/edit_text_color"
                android:textColorHint="#d6d6d6"
                android:textColor="#ffffff"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/activity_create_account_pwdConfirm_editText_text"
                android:id="@+id/activity_create_account_pwdConfirm_editText_id"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.00"
                android:background="@drawable/edit_text_color"
                android:textColorHint="#d6d6d6"
                android:textColor="#ffffff"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
