<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.julab.battletap.FinalizeCreateAccountActivity"
    android:background="@drawable/fond_battletap">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_finalize_create_account_btnFinalize_text"
            android:id="@+id/activity_finalize_create_account_btnFinalize_id"
            android:layout_gravity="right"
            android:background="@drawable/background_btncreating_account" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_finalize_create_account_secret_question_id"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_finalize_create_account_secret_response_id"
            android:hint="@string/activity_finalize_create_account_secret_response_hint"
            android:textColorHint="#d6d6d6"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_color" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1"

            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/activity_finalize_create_account_sexe_text"
                android:textColor="#ffffff"
                android:id="@+id/activity_finalize_create_account_sexe_id"
                android:layout_weight="0.29"
                android:textSize="20dp" />

            <RadioGroup
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:textColor="#ffffff"
                android:weightSum="1">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_finalize_create_account_radioButtonMale_text"
                    android:textColor="#ffffff"
                    android:id="@+id/activity_finalize_create_account_radioButtonMale_id"
                    android:checked="true"
                    android:layout_weight="0.55" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_finalize_create_account_radioButtonFemale_text"
                    android:textColor="#ffffff"
                    android:id="@+id/activity_finalize_create_account_radioButtoFemale_id"
                    android:layout_weight="0.86" />

            </RadioGroup>
        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_finalize_create_account_country_id"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</RelativeLayout>
