<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.julab.battletap.ConnectionActivity"
    android:background="@drawable/fond_battletap">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_connection"
        tools:context="com.julab.battletap.ConnectionActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/logo2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailTextId"
                    android:hint="@string/hintEmail"
                    android:layout_gravity="center_horizontal"
                    android:textIsSelectable="true"
                    android:textColorHint="#d6d6d6"
                    android:textColorHighlight="#ff1100"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/pwdTextId"
                    android:hint="@string/passwordText"
                    android:layout_gravity="center_horizontal"
                    android:textColorHint="#d6d6d6"
                    android:textColorHighlight="#ff1100"/>

                <Button
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ConnectionButton"
                    android:id="@+id/connectionButton"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20dp"
                    android:height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btnconnection"
                    android:textColor="#ffffff"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pwdForget"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:textColor="#0094ff"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/createAccountBtn"
                android:id="@+id/connectionActivityCreateAccountBtnId"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
